# shadcn-fastapi-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  azure.yaml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: azure-deploy.yml  ci.yml  deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  tasks.py
backend/app/core/: config.py  exceptions.py  logger.py
backend/app/schemas/: tasks.py
backend/tests/: conftest.py  test_tasks.py
frontend/: README.md  env.example  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/tasks/: page.tsx
frontend/components/: auth-provider.tsx  login-button.tsx  site-header.tsx
frontend/lib/: auth.ts  config.ts
infra/: main.bicep  main.parameters.json
infra/modules/: aad-app.bicep  container-apps-stack.bicep  containerapp.bicep  role-assignment.bicep
